[tool.poetry]
name = "documents"
version = "0.5"
description = "Working with jinja2 tags in documents."
authors = ["dasDachs <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
Jinja2 = "^2.11"
MarkupSafe = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
